# advanced_py_ll

./: README.md
data_algo/: .gitignore
data_algo/ch_02_stack/: 02_stack.py  03_reverse_string_with_stack.py
data_algo/ch_03_2d_list/: 03_read_maze.py
design_pattern/ch_02_creational_patterns/: 02_factory_example.py
gui_with_tkinter/ch-04_organizational_widget/: 01_frames.py  02_top_level_window.py  03_paned_window.py  notebook_widget.py
gui_with_tkinter/ch_01_getting_started/: hello.py
gui_with_tkinter/ch_02_tkinter_concepts/: 02_tkinter_widgets.py  05_hello_advanced.py
gui_with_tkinter/ch_03_basic/: 01_labels.py  02_capturing_with_button.py  03_radio_check_button.py  04_entry_widget.py  05_combobox_spinbox.py  06_progressbar_scale.py
hands_on/: checking_slice.py  handle_csv.py
hands_on/ch_03_csv_json/: challenge.py
hands_on/ch_04_extending_service/: 01_world_bank.py  02_flask_app.py
hands_on/flask_project/: app.py  main.py
open_source/: pyproject.toml
real_world_app/: .gitignore  requirements.txt
real_world_app/web_scrapping/: web_scrapping.ipynb  webiset_html.txt
