[project]
name = "open-source"
version = "0.1.0"
description = "this is the first python package tha I am building"
authors = [
    {name = "mszahan",email = "mszahan1@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
